--- a/06_android/android/app/build.gradle
+++ b/06_android/android/app/build.gradle
@@ -18,6 +18,8 @@ android {
     }
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
+
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
@@ -50,12 +52,14 @@ dependencies {
     def okhttp_version = "4.12.0"
     def glide_version = "4.16.0"
     def picasso_version = "2.71828"
+    def core_desugaring_version = "2.1.5"
 
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
     implementation "com.google.android.material:material:$mdc_version"
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$core_desugaring_version"
 
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "com.squareup.picasso:picasso:$picasso_version"
