--- a/04_sync/android/build.gradle
+++ b/04_sync/android/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "2.1.20"
+    ext.kotlin_version = "2.1.21"
     ext.android_gradle_version = "8.10.1"
 }
 
@@ -9,6 +9,7 @@ plugins {
     id 'com.android.application' version "$android_gradle_version" apply false
     id 'com.android.library' version "$android_gradle_version" apply false
     id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
+    id 'com.google.devtools.ksp' version "2.1.21-2.0.2" apply false
 }
 
 subprojects {
