--- a/12_images/android/app/build.gradle
+++ b/12_images/android/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.devtools.ksp' // вместо устаревшего 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 
 android {
@@ -13,8 +13,6 @@ android {
         compileSdk 35
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     compileOptions {
@@ -54,9 +52,6 @@ dependencies {
     def swiperefreshlayout_version = "1.1.0"
     def coordinatorlayout_version = "1.3.0"
     def recyclerview_version = "1.4.0"
-    def junit_version = "4.13.2"
-    def ext_junit_version = "1.2.1"
-    def espresso_core_version = "3.6.1"
     def activity_version = "1.10.1"
     def lifecycle_version = "2.8.7"
     def mdc_version = "1.12.0"
@@ -87,7 +82,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation platform("com.google.firebase:firebase-bom:$firebase_version")
     implementation "com.google.firebase:firebase-messaging-ktx"
@@ -100,8 +95,4 @@ dependencies {
     implementation "com.google.android.gms:play-services-base:$play_services_base_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$core_desugaring_version"
-
-    testImplementation "junit:junit:$junit_version"
-    androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core_version"
 }
