--- a/12_images/android/app/build.gradle
+++ b/12_images/android/app/build.gradle
@@ -6,11 +6,12 @@ apply plugin: 'com.google.gms.google-services'
 android {
     namespace "ru.netology.nmedia"
 
+    compileSdkVersion 36
+
     defaultConfig {
         applicationId "ru.netology.nmedia"
         minSdkVersion 23
         targetSdkVersion 36
-        compileSdk 35
         versionCode 1
         versionName "1.0"
     }
