--- a/.github/workflows/dependabot-automerge.yml
+++ b/.github/workflows/dependabot-automerge.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           ignoreActions: worker,WIP
           checkInterval: 60
+          timeout: 1800
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Automerge
